Improvements :

- Fixed run command handling, now execute commands from inside project directory