@@ -1,4 +1,4 @@
 #because it can't be empty on github
 
-__version__ = "0.8.5.2"
+__version__ = "0.8.5.3"
 
